# shoot-vs

./: .gitignore  CMakeLists.txt
cmake/: External-googletest.cmake  Superbuild.cmake
src/: AssetLibrary.cpp  AssetLibrary.h  CMakeLists.txt  GameObject.h  Ship.cpp  Ship.h  World.cpp  World.h  main.cpp
src/cmake/: Paths.cmake
src/cricket/: ActionPlayer.h  ActionQueue.cpp  CMakeLists.txt  KeyboardEventState.h  NetworkClient.cpp  NetworkClient.h  PlayerActionState.h  Utility.h
src/cricket/game/: World.h
src/cricket/input/: ActionPlayer.cpp  ActionPlayer.h  ActionQueue.cpp  ActionQueue.h  ActionState.h  InpuDeviceClass.h  InputDevice.h  InputDeviceClass.h  InputDeviceCollector.cpp  InputDeviceCollector.h  InputDeviceEnumerator.cpp  InputDeviceEnumerator.h  KeyboardEventState.cpp  KeyboardInputDevice.cpp  KeyboardInputDevice.h  PlayerActionState.h
src/cricket/network/: CMakeLists.txt  NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  NetworkServerListener.cpp  NetworkServerListener.h
src/cricket/resource/: CMakeLists.txt
src/game/: CMakeLists.txt  GameSimulation.cpp  GameSimulation.h  Ship.cpp  Ship.h  main.cpp
src/test/: CMakeLists.txt
src/test/cricket/: CMakeLists.txt
src/test/cricket/network/: CMakeLists.txt
src/test/cricket/network/client_server/: CMakeLists.txt  test_main.cpp
