cmake_minimum_required (VERSION 2.8)

add_subdirectory(cricket)
add_subdirectory(game)

#set(TARGET_NAME ShootVs)
#
#file(GLOB SOURCES *.cpp)
#add_executable (${TARGET_NAME} ${SOURCES})
#
#target_include_directories(${TARGET_NAME} PUBLIC
#    ${GLM_INCLUDE_DIR}
#    ${SFLM_INCLUDE_DIR})
#target_link_libraries(${TARGET_NAME} ${SFML_LIBRARIES} stdc++fs)
#
